Added VCA logo & Updated Vids
FPO perhaps for Southern after saturation and Northern after inclusion
of swirling trees.

Central Converted and a go.

VCA color logo also added to the end of Camp California Article

--- a/css/style.css
+++ b/css/style.css
@@ -460,6 +460,14 @@ a:hover {
   	transform: translate(-50%, -50%);
 }
 
+.vca-hero-logo {
+	position: absolute;
+	top: 25px;
+	right: 25px;
+	width: 10%;
+	z-index: 200;
+ }
+
 /* Region Hero SVG Styles */
 
 .region-hero-title {
@@ -752,6 +760,13 @@ ul.scroll-list {
 
 .bold {
 	font-weight: 700;
+}
+
+.vca-logo-color {
+	width: 20%;
+	padding-top: 20px;
+	display: block;
+	margin: 0 auto;
 }
 
 /* Specific Article Styles */
