--- a/css/style.css
+++ b/css/style.css
@@ -713,7 +713,7 @@ ul.scroll-list {
 
 }
 .parallax-bg__myers {
-	background-image: url(../images/Article_Roadtrip/alamy_RM_bp6amt.jpg);
+	background-image: url(../images/article_roadtrip/alamy_RM_bp6amt.jpg);
 }
 
 .parallax-bg__surf {
@@ -828,7 +828,7 @@ ul.scroll-list {
 	top: 50%;
 	transform: translateY(-50%) !important;
 	left: 45%;
-	width: 50%;
+	width: 40%;
 	z-index: +1;
 }
 
@@ -842,6 +842,32 @@ ul.scroll-list {
 	-webkit-border-radius: 50%;
 	border-radius: 50%;
 	box-shadow: 0px 0px 0px 8px rgba(235,4,120,1);
+	background-image: url(../images/article_roadtrip/map_1.jpg);
+	transition: all .5s ease-in-out;
+}
+
+.circle-bg-2 {
+	background-image: url(../images/article_roadtrip/map_2.jpg);
+}
+
+.circle-bg-3 {
+	background-image: url(../images/article_roadtrip/map_3.jpg);
+}
+
+.circle-bg-4 {
+	background-image: url(../images/article_roadtrip/map_4.jpg);
+}
+
+.circle-bg-5 {
+	background-image: url(../images/article_roadtrip/map_5.jpg);
+}
+
+.circle-bg-6 {
+	background-image: url(../images/article_roadtrip/map_6.jpg);
+}
+
+.circle-bg-7 {
+	background-image: url(../images/article_roadtrip/map_7.jpg);
 }
 
 #article-surf-skate {
