Blog box started

--- a/css/style.css
+++ b/css/style.css
@@ -553,11 +553,6 @@ a.read-more {
 	box-shadow: 2px 4px 12px rgba(0,0,0,.2);
 	margin-bottom: 40px;
 }
-.container-fluid.article.blogger-post img.blogger-info-box {
-	max-width: 750px;
-	margin-bottom: 60px;
-	box-shadow: 2px 4px 12px rgba(0,0,0,.2);
-}
 .container-fluid.article.blogger-post .col-md-offset-1 {
 	margin-left: 4%;
 }
@@ -579,6 +574,55 @@ a.read-more {
 .container-fluid.article.blogger-post .r-rail-above .caption {
 	margin-left: 8%;
 }
+/* Blogger Profile Box */
+
+.container-fluid.article .blogger-profile-wrap {
+	width: 100%;
+	background-color: #fff;
+	height: 550px;
+	max-width: 850px;
+	margin-bottom: 70px;
+	box-shadow: 2px 4px 12px rgba(0,0,0,.2);
+	border: 2px solid #05bbff;
+}
+.container-fluid.article .blogger-profile-wrap .left-quadrant {
+	width: 65%;
+	height: 100%;
+	position: relative;
+	float: left;
+	background-image: url("../images/brandi/Brandi-profile.jpg");
+	background-size: auto 100%;
+	background-position: center;
+}
+.container-fluid.article .blogger-profile-wrap .right-quadrant {
+	width: 35%;
+	height: 100%;
+	position: relative;
+	float: left;
+	background-image: url("../images/fake-border.jpg");
+	background-repeat: repeat-y;
+	background-position: top left; 
+}
+.container-fluid.article .blogger-profile-wrap .right-quadrant .btm-row {
+	background-image: url("../images/fake-border.jpg");
+	background-repeat: repeat-y;
+	background-position: left;
+}
+.container-fluid.article .blogger-profile-wrap .btm-row {
+  height: 80px;
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+  background-color: #fff;
+  border-top: 1px solid #05bbff;
+}
+.container-fluid.article .blogger-profile-wrap .btm-row h1 {
+	font-size: 36px;
+	padding-top: 0;
+	line-height: 80px;
+
+}
+
 /* Specific Blog Post Styles */
 
 .bg-img-container-wrap#nrthrn-blog-post {
