--- a/css/style.css
+++ b/css/style.css
@@ -611,7 +611,7 @@ a.read-more {
 	transform: scale(1);
 	cursor: pointer;
 }
-.container-fluid.article .blogger-profile-wrap .right-quadrant:hover img {
+.container-fluid.article .blogger-profile-wrap .right-quadrant img:hover {
 	-webkit-transform: scale(2.5);
 	transform: scale(2.5);
 }
@@ -646,6 +646,17 @@ a.read-more {
 	text-align: left;
 }
 
+/*Blogger profile SVG Styles*/
+
+.container-fluid.article .blogger-profile-wrap .right-quadrant .arrow {
+	width: 35px;
+	height: auto;
+	position: absolute;
+	bottom: 68px;
+	left: 26px;
+	z-index: 100!important;
+}
+
 /* Specific Blog Post Styles */
 
 .bg-img-container-wrap#nrthrn-blog-post {
@@ -675,7 +686,7 @@ a.read-more {
 
 /* Arrow Icon SVG Styles */
 
-.arrow circle {
+.arrow .bg-yellow {
 	fill:#FFF845;
 }
 
@@ -685,7 +696,7 @@ a.read-more {
 	margin-top: -20px;
 }
 
-.caption svg {
+.caption .arrow {
 	width: 25px;
 	height: auto;
 	float: left;
