--- a/css/style.css
+++ b/css/style.css
@@ -299,12 +299,14 @@ body {
 /* TOC */
 
 .toc .row {
+	position: relative;
 	height: 100%;
 	border-bottom: 4px solid rgba(235,4,120,1);
 	background-color: rgba(241,251,255,1);
 }
 
 .toc .row .col-md-4 {
+	position: relative;
 	background-color: rgba(241,251,255,1);
 	background-size: 100%;
 	background-repeat: no-repeat;
@@ -316,26 +318,43 @@ body {
 	background-color: rgba(255,255,255,1);
 }
 
-.toc .row .toc-nca {
+.toc .row .toc-bg-container {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 35%;
+}
+.toc .row .toc-nca-bg {
+	height: 100%;
 	background-image: url("../images/Nav/770x388/GettyImages-517877952_screen.png");
+	background-size: cover;
+	background-position: bottom;
 }
 
-.toc .row .toc-nca:hover {
+.toc .row .toc-nca:hover .toc-nca-bg {
 	background-image: url("../images/Nav/770x388/GettyImages-517877952.png");
 }
 
-.toc .row .toc-cca {
+.toc .row .toc-cca-bg {
+	height: 100%;
 	background-image: url("../images/Nav/770x388/GettyImages-184084521_screen.png");
+	background-size: cover;
+	background-position: bottom;
 }
 
-.toc .row .toc-cca:hover {
+.toc .row .toc-cca:hover .toc-cca-bg {
 	background-image: url("../images/Nav/770x388/GettyImages-184084521.png");
 }
-.toc .row .toc-sca {
+
+.toc .row .toc-sca-bg {
+	height: 100%;
 	background-image: url("../images/Nav/770x388/GettyImages-152627362_screen.png");
+	background-size: cover;
+	background-position: bottom;
 }
 
-.toc .row .toc-sca:hover {
+.toc .row .toc-sca:hover .toc-sca-bg {
 	background-image: url("../images/Nav/770x388/GettyImages-152627362.png");
 }
 
@@ -366,9 +385,14 @@ ul.toc-menu li a:hover {
 
 ul.toc-menu .nav-explore {
 	margin-top: 20px;
-	color: rgba(255,255,255,1);
-	text-shadow: 0px 2px 6px rgba(0,0,0,.55);
+	color: rgba(0,0,0,1);
 }
+
+.toc .row .col-md-4:hover ul.toc-menu .nav-explore {
+	color: rgba(255,255,255,1);
+	text-shadow: 0px 2px 6px rgba(0,0,0,.85);
+}
+
 ul.toc-menu .toc-region {
 	box-shadow: 0px 10px 6px -5px rgba(0,0,0,.1);
 	width: 50%;
@@ -377,12 +401,13 @@ ul.toc-menu .toc-region {
 	background-color: rgba(255,255,255,1);
 	font-weight: 900;
 	font-size: 20px;
-	color: rgba(5,187,255,1);
+	color: rgba(235,4,120,1);
 }
 ul.toc-menu .blogger-circle {
 	width: 150px;
 	height: 150px;
 	margin: 0 auto;
+	padding-bottom: 10px;
 	background-color: black;
 /*	background-image: url("../images/FPO_NCA.jpg");
 	background-size: 100%;*/
@@ -395,8 +420,10 @@ ul.toc-menu .blogger-circle {
 	color: rgba(235,4,120,1);
 	font-weight: 300;
 	font-size: 20px;
-	margin-top: -10px;
+	margin-top: 10px;
+	margin-bottom: -20px;
 }
+
 ul.toc-menu .toc-blogger a{
 	margin: 20px 0px 0px 0px;
 	font-weight: 500;
@@ -408,8 +435,10 @@ ul.toc-menu .toc-blogger a{
 	color: rgba(235,4,120,1);
 	font-weight: 500;
 	font-size: 30px;
-	margin-top: 0px;
+	margin-top: 30px;
 	padding-top: 10px;
+	text-transform: uppercase;
+	letter-spacing: .25em;
 }
 
 ul.toc-menu .divider {
