--- a/css/style.css
+++ b/css/style.css
@@ -1480,6 +1480,23 @@ ul.scroll-list {
 	background-image: url("../images/kid-beaches/santa-monica1.jpg");
 }
 
+/* Video Styles */
+
+.videoWrapper {
+	position: relative;
+	padding-bottom: 56.25%; /* 16:9 */
+	padding-top: 25px;
+	height: 0;
+}
+
+.videoWrapper iframe {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+}
+
 /* Utility Styles*/
 .clearfix:after {
      visibility: hidden;
