--- a/css/style.css
+++ b/css/style.css
@@ -324,6 +324,7 @@ body {
 	left: 0;
 	width: 100%;
 	height: 35%;
+	transition: all 1s ease;
 }
 .toc .row .toc-nca-bg {
 	height: 100%;
@@ -397,7 +398,7 @@ ul.toc-menu .toc-region {
 	box-shadow: 0px 10px 6px -5px rgba(0,0,0,.1);
 	width: 50%;
 	margin: 10px 25%;
-	padding: 10px;
+	padding: 10px 15px 8px;
 	background-color: rgba(255,255,255,1);
 	font-weight: 900;
 	font-size: 20px;
@@ -442,7 +443,7 @@ ul.toc-menu .toc-blogger a{
 }
 
 ul.toc-menu .divider {
-	box-shadow: 0px 10px 10px 0px rgba(0,0,0,.1);
+	box-shadow: 0px 8px 14px 0px rgba(0,0,0,.07);
 	display: block;
 	z-index: +500;
 	max-width: 80%;
@@ -1510,3 +1511,23 @@ ul.scroll-list {
 }
 
 /*test*/
+
+
+/* ----------- Non-Retina Screens ----------- */
+
+@media screen and (min-device-width: 1200px), screen and (max-device-width: 1600px), screen and (-webkit-min-device-pixel-ratio: 1) { 
+	.toc .row .toc-bg-container {height: 225px;}
+	ul.toc-menu .toc-region {width: 300px; margin: 10px 0; display: inline-block; font-size: 22px;}
+	ul.toc-menu .toc-blogger a {margin: 10px 0 0 0;}
+	.toc-plus {margin-top: 25px;}
+}
+
+
+/* ----------- Retina Screens ----------- */
+@media screen and (min-device-width: 1200px), 
+  and (max-device-width: 1600px) 
+  and (-webkit-min-device-pixel-ratio: 2)
+  and (min-resolution: 192dpi) { 
+}
+
+
