Slight adjustment to the text treatment

--- a/css/style.css
+++ b/css/style.css
@@ -1570,6 +1570,7 @@ ul.scroll-list {
 		font-size: 110px;
 	}
 	.hero#main-hero .vca-hero-logo {left: 50%;bottom: 12%;}
+	.hero#main-hero .title-inner .hero-text-wrap {margin-top:1.4%;}
 }
 
 
