Img Optimized, Captions Added, Text Reflowed
-animation on all but first photo
-arrow rotation for captions

--- a/css/style.css
+++ b/css/style.css
@@ -880,6 +880,9 @@ a.read-more {
 	padding-top: 0;
 	margin-left: 0;
 }
+.cred.no-left-margin {
+	margin-left: 0;
+}
 
 /* Section Header Styles*/
 
