--- a/css/style.css
+++ b/css/style.css
@@ -884,6 +884,16 @@ a.read-more {
 	margin-left: 0;
 }
 
+#camp-ca .caption p {
+	margin-top: 12px;
+	margin-bottom: 0px;
+	font-size: 12px;
+}
+
+#camp-ca .italc.cred {
+	font-size: 12px
+}
+
 /* Section Header Styles*/
 
 .section-marker {
