Blogger bg images added
*Some still FPO.

--- a/css/style.css
+++ b/css/style.css
@@ -51,10 +51,10 @@ body {
 
 .hero#main-hero .title-inner h1 {
 	color: rgba(235,4,120,1);
-	font-size: 100px;
-	font-weight: 600;
+	font-size: 90px;
+	font-weight: 800;
 	text-transform: uppercase;
-	letter-spacing: 4px;
+	letter-spacing: 2px;
 	line-height: 120px;
 	margin-left: -3%;
 	text-shadow: 0px 2px 4px rgba(0,0,0,.1);
@@ -66,10 +66,13 @@ body {
 }
 .hero#main-hero .title-inner p {
 	color: #000;
-	font-size: 25px;
-	max-width: 750px;
+	font-size: 17px;
+	font-weight: 400;
+	max-width: 550px;
+	text-transform: uppercase;
+	letter-spacing: 1px;
 	display: inline-block;
-	line-height: 30px;
+	line-height: 28px;
 	text-shadow: 0px 2px 4px rgba(0,0,0,.1);
 }
 .hero#main-hero .vca-hero-logo {
@@ -810,13 +813,13 @@ a.read-more {
 /* Specific Blog Post Styles */
 
 .bg-img-container-wrap#nrthrn-blog-post {
-	background-image: url("../images/FPO_Brandi_BG_img.jpg");
+	background-image: url("../images/brandi/fpo-northern_blogger_bg_img.jpg");
 }
 .bg-img-container-wrap#cntrl-blog-post {
-	background-image: url("../images/FPO_Brandi_BG_img.jpg");
+	background-image: url("../images/pattie/fpo-central_blogger_bg_img.jpg");
 }
 .bg-img-container-wrap#sthrn-blog-post {
-	background-image: url("../images/FPO_Brandi_BG_img.jpg");
+	background-image: url("../images/justine/fpo-southern_blogger_bg_img.jpg");
 }
 .bg-img-container-wrap#sthrn-blog-post .col-md-6 p.italc {
 	letter-spacing: .25px;
@@ -1556,8 +1559,6 @@ ul.scroll-list {
 	ul.toc-menu .toc-blogger a {margin: 10px 0 0 0;}
 	.toc-plus {margin-top: 25px;}
 	.hero#main-hero .title-outer {height: 65%;}
-	.hero#main-hero .title-inner h1 {font-size: 90px; margin-left: -3%;}
-	.hero#main-hero .title-inner p {font-size: 22px;max-width: 650px;line-height: 28px;}
 	.hero#main-hero .title-inner .hero-text-wrap {margin-top:.8%;}
 	.hero#main-hero .vca-hero-logo {left: 8%;bottom: 18%;}
 }
