--- a/css/style.css
+++ b/css/style.css
@@ -864,6 +864,7 @@ a.read-more {
 	max-width: 400px;
 	padding: 0;
 }
+.parralax-credit p.cred, 
 .caption p.cred,
 .caption .inline {
 	color: #A9A7A7;
@@ -901,6 +902,21 @@ a.read-more {
 	letter-spacing: 1px;
 	padding-top: 5px;
 	padding-bottom: 15px;
+}
+
+.parralax-credit {
+	position: absolute;
+	z-index: +1;
+	bottom: 1%;
+	right: 2%;
+}
+
+.parralax-credit p {
+	color: rgba(255,255,255,1);
+	text-transform: uppercase;
+	font-size: 12px;
+	letter-spacing: 1px;
+	text-shadow: 0px 0px 4px rgba(0,0,0,.5);
 }
 
 /* Section Header Styles*/
